# energy_demand

./: .coveragerc  .environment.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  HES_data_reader.py  LICENSE  LICENSE.txt  README.md  README.rst  TESTYAML.yaml  _SCRAP_TECH_MODEL.py  _scrap.py  building_stock_generator.py  functions_residential_model.py  inputs.yaml  kernel-b2106b65-0cb8-4928-8ad9-8a3cc7ed39ef.json  local_run_config_file.ini  local_run_config_file_cluster.ini  local_run_config_file_workstation.ini  main.py  main_functions.py  model.yaml  outputs.yaml  parameters.yaml  path_yaml  program.prof  requirements.readthedocs.txt  requirements.txt  residential_model.py  residential_model_functions.py  run.py  setup.cfg  setup.py  test-requirements.txt  time_intervals.yaml  timesteps.yaml  transition_module.py  (+9 more)
config_data/: ECUK_Tables_2016.xlsx  README.txt  _srap.py  assumptions_capacity_installations - Copy.csv  assumptions_capacity_installations.csv  rs_assumptions_capacity_installations.csv  technology_definition.csv  yaml_parameters_constrained.yml  yaml_parameters_scenario.yml
data/: ECUK_Tables_2016.xlsx
docs/: Makefile  changes.rst  conf.py  documentation.md  doucment_carbon_trust.docx  index.rst  model_documentation.md  model_documentation.rst  notes_on_tools.txt  requirements.readthedocs.txt  residential_notes.rst  test.txt  ~$ucment_carbon_trust.docx  ~WRL0492.tmp
energy_demand/: SMV.py  WeatherRegion.py  _ASSUMPTIONS.py  _SCRAP.PY  __TECHNOLOGY_LIST.py  ___programming_on_the_fly.py  __init__.py  _fitting.py  _old_functions.py  _scrap.py  assumptions.py  assumptions_fuel_shares.py  building_stock_functions.py  building_stock_generator.py  data_loader.py  data_loader_functions.py  enduse.py  enduseClass.py  enduse_func.py  energy_model.py  integration_template.xlsx  is_model.py  load_profiles_generator.py  main.py  main_functions.py  main_object_approach.py  model.py  national_dissaggregation.py  new_load_profile_generator.py  plot_functions.py  processing.py  processing_multiple_scenarios.py  read_and_plot_results.py  region.py  regionClass.py  residential_model.py  residential_model_functions.py  results_multiple_scenarios.py  results_processing.py  rs_model.py  (+18 more)
model_output/: NEU_elec.csv  NEU_gas.csv  YAML_TIMESTEPS.yml  energy_fact_file_housing_stock_age.csv  test.csv  to_energy_supply_elec.csv  to_energy_supply_elec_CHART.xlsx  to_energy_supply_gas.csv  to_energy_supply_gas_CHART.xlsx  will_file_elec.csv  will_file_gas.csv
scripts/: _execute_all_scripts.py  assump_change_temp.py  assump_generate_sigmoid.py  read_raw_weather_data.py  s_change_temp.py  s_disaggregation.py  s_fuel_to_service.py  s_generate_sigmoid.py  s_ss_raw_shapes.py  (+8 more)
(+691 files in other folders)
